# narule-sir-pdf-work

./: .env  .gitignore  Dockerfile.celery  README.md  STRATERGIES.md  STRATERGIES_ALL.md  celeryconfig.py  client.py  client.sh  metrics_utils.py  monitor_server.py  pyproject.toml  tasks.py
manifest/phd/: compose.dev.yaml  compose.yaml
static/: style.css
strategies/: __init__.py  adaptive_selection.py  test_strategies.py  top_k_selection.py
templates/: index.html
