[project]
name = "phd-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flwr-datasets[vision]>=0.5.0",
    "flwr[simulation]>=1.20.0",
    "matplotlib>=3.10.6",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "tensorflow>=2.19.1",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.1",
]
